feat: Use environment variables